<resources>
    <string name="app_name">Music world</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">world of music</string>
    <string name="back_btn">Back</string>
    <string name="song_name">Song Name</string>
    <string name="previous_btn">Previous</string>
    <string name="pause_btn">Pause</string>
    <string name="next_btn">Next</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>

</resources>